--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -7,7 +7,7 @@ ENV PYTHONDONTWRITEBYCODE 1
 ENV PYTHONUNBUFFERED 1
 
 RUN pip install --upgrade pip --root-user-action ignore
-RUN pip install poetry --root-user-action ignore
-RUN poetry install
+RUN pip install uv --root-user-action ignore
+RUN uv venv --python 3.11.11
 
 CMD ["make", "test-local"]
