--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,66 +1,55 @@
 [project]
 name = "SeaMusic"
-description = "API for musical collaborations service"
 version = "0.1.0"
+description = "API for musical collaborations service"
 authors = [
     {name="Maxim Kolyadin", email="koladinmaksim246@gmail.com"},
 ]
 readme = "README.md"
-requires-python = "^3.11.11"
-license-files = []
-dynamic = ["version"]
+requires-python = ">=3.11.11"
+dependencies = [
+    "aiohttp >= 3.10.3",
+    "aiosmtplib >= 3.0.2",
+    "alembic >= 1.13.2",
+    "asyncpg >= 0.29.0",
+    "boto3 >= 1.34.162",
+    "fastapi >= 0.112.1",
+    "fastapi-cache >= 0.1.0",
+    "google-auth-oauthlib >= 1.2.1",
+    "hiredis >= 3.0.0",
+    "httplib2 >= 0.22.0",
+    "jmespath >= 1.0.1",
+    "mutagen >= 1.47.0",
+    "passlib >= 1.7.4",
+    "pydantic >= 2.8.2",
+    "pydantic-settings >= 2.4.0",
+    "pyjwt >= 2.9.0",
+    "python-dotenv >= 1.0.1",
+    "python-multipart >= 0.0.12",
+    "redis >= 5.0.8",
+    "requests >= 2.32.3",
+    "sqlalchemy >= 2.0.32",
+    "types-requests >= 2.32.0.20240712",
+    "uvicorn >= 0.30.6",
+]
 
-[tool.poetry]
-package-mode = false
-readme = "README.md"
-
-[tool.poetry.dependencies]
-aiohttp = "^3.10.3"
-aiosmtplib = "^3.0.2"
-alembic = "^1.13.2"
-asyncpg = "^0.29.0"
-boto3 = "^1.34.162"
-email-validator = "2.2.0"
-fastapi = "^0.112.1"
-fastapi-cache = "^0.1.0"
-google-auth-oauthlib = "^1.2.1"
-hiredis = "^3.0.0"
-httplib2 = "^0.22.0"
-jmespath = "^1.0.1"
-mutagen = "^1.47.0"
-passlib = "^1.7.4"
-pydantic = "^2.8.2"
-pydantic-settings = "^2.4.0"
-pyjwt = "2.9.0"
-python = "^3.11.11"
-python-dotenv = "^1.0.1"
-python-multipart = "^0.0.12"
-redis = "^5.0.8"
-requests = "^2.32.3"
-sqlalchemy = "^2.0.32"
-types-requests = "^2.32.0.20240712"
-uvicorn = "^0.30.6"
-poetry = "^2.0.1"
-
-[tool.poetry.group.dev.dependencies]
-black = "^24.8.0"
-coverage = "^7.6.1"
-flake8 = "^7.1.1"
-flake8-pyproject = "^1.2.3"
-httpx = "^0.27.0"
-iniconfig = "^2.0.0"
-mypy = "^1.11.1"
-pytest = "^8.3.2"
-pytest-asyncio = "^0.23.8"
-python-dateutil = "^2.9.0.post0"
-pytest-dependency = "^0.6.0"
-pytest-dotenv = "^0.5.2"
-pytest-mock = "^3.14.0"
-python-jose="^3.3.0"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.uv]
+dev-dependencies = [
+    "black >= 24.8.0",
+    "coverage >= 7.6.1",
+    "flake8 >= 7.1.1",
+    "flake8-pyproject >= 1.2.3",
+    "httpx >= 0.27.0",
+    "iniconfig >= 2.0.0",
+    "mypy >= 1.11.1",
+    "pytest >= 8.3.2",
+    "pytest-asyncio >= 0.23.8",
+    "python-dateutil >= 2.9.0.post0",
+    "pytest-dependency >= 0.6.0",
+    "pytest-dotenv >= 0.5.2",
+    "pytest-mock >= 3.14.0",
+    "python-jose >= 3.3.0",
+]
 
 [tool.flake8]
 max-line-length = 200
