--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "jmespath >= 1.0.1",
     "mutagen >= 1.47.0",
     "passlib >= 1.7.4",
-    "pydantic >= 2.8.2",
+    "pydantic[email] >= 2.8.2",
     "pydantic-settings >= 2.4.0",
     "pyjwt >= 2.9.0",
     "python-dotenv >= 1.0.1",
