--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,16 +13,12 @@ jobs:
           architecture: x64
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Install and configure Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: 2.0.1
-          virtualenvs-create: true
-          virtualenvs-in-project: false
-      - name: Install dependencies
-        run: poetry install
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v5
+      - name: Create a virtual environment
+        run: uv venv --python 3.11.11
       - name: Run flake8
-        run: poetry run flake8
+        run: uv run flake8
   mypy:
     runs-on: ubuntu-latest
     steps:
@@ -33,17 +29,13 @@ jobs:
           architecture: x64
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Install and configure Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: 2.0.1
-          virtualenvs-create: true
-          virtualenvs-in-project: false
-      - name: Install dependencies
-        run: poetry install
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v5
+      - name: Create a virtual environment
+        run: uv venv --python 3.11.11
       - name: Run mypy for src
-        run: poetry run mypy -p src --cache-dir=/dev/null --config-file=pyproject.toml
+        run: uv run mypy -p src --cache-dir=/dev/null --config-file=pyproject.toml
       - name: Run mypy for tests
-        run: poetry run mypy -p tests --cache-dir=/dev/null --config-file=pyproject.toml
+        run: uv run mypy -p tests --cache-dir=/dev/null --config-file=pyproject.toml
       - name: Run mypy for migrations
-        run: poetry run mypy -p migrations --cache-dir=/dev/null --config-file=pyproject.toml
+        run: uv run mypy -p migrations --cache-dir=/dev/null --config-file=pyproject.toml
